[ Fix ] When calling JexxaMain::stop() the termination of running commands is ensured by acquiring the transaction. -> Updated tests accordingly.